# marketpulse

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 56b166236dbc_initial_schema.py
backend/app/: config.py  dependencies.py  main.py  seed.py
backend/app/analyst/: briefing_generator.py  company_summarizer.py  prompts.py  risk_alerts.py
backend/app/analytics/: aggregator.py  anomaly_detector.py  confidence.py  cross_source.py  momentum.py  predictive.py
backend/app/api/: analyst.py  analytics.py  companies.py  graph.py  industries.py  router.py  sentiment.py
backend/app/core/: cache.py  database.py  redis.py
backend/app/graph/: entity_graph.py
backend/app/ingestion/: base.py  news_collector.py  reddit_collector.py  scheduler.py  service.py  stocktwits_collector.py
backend/app/market/: price_fetcher.py
backend/app/processing/: company_mapper.py  deduplicator.py  entity_extractor.py  pipeline.py  text_cleaner.py
backend/app/schemas/: analyst.py  analytics.py  company.py  graph.py  industry.py  sentiment.py
backend/app/sentiment/: ensemble.py  explainability.py  finbert.py  llm_scorer.py
backend/tests/: test_api.py  test_processing.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-analyst.ts  use-analytics.ts  use-graph.ts  use-market-data.ts
frontend/src/lib/: api.test.ts  api.ts  constants.ts  supabase.ts
(+34 files in other folders)
