[project]
name = "marketpulse-backend"
version = "0.1.0"
description = "MarketPulse AI - Real-time financial sentiment analysis backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # Supabase
    "supabase>=2.0",

    # Cache
    "redis>=5.0",

    # LLM
    "anthropic>=0.40",

    # Data ingestion
    "asyncpraw>=7.8",
    "feedparser>=6.0",

    # Scheduling
    "apscheduler>=3.10",

    # Utilities
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.47",
    "optimum[onnxruntime]>=1.23",
    "spacy>=3.7",
    "torch>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/seed.py" = ["E501"]
"app/analyst/prompts.py" = ["E501"]
"app/analyst/briefing_generator.py" = ["E501"]
"app/analyst/company_summarizer.py" = ["E501"]
"app/sentiment/llm_scorer.py" = ["E501"]
"app/ingestion/news_collector.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
